Lab 01 - Requirements + SonarQube