@@ -46,7 +46,7 @@ public class ProductService {
         if (categorie == CategorieBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie() == categorie)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Product> filterByTip(TipBautura tip) {
